Rewrote the Packaging tests.